# brrr

./: .git-blame-ignore-revs  .gitignore  README.md  brrr-demo.module.nix  brrr-demo.nix  brrr-demo.options.nix  brrr-demo.service.nix  brrr-demo.test.nix  brrr-integration.test.nix  brrr.py  brrr_demo.py  dynamodb.module.nix  dynamodb.service.nix  flake.nix  localstack.nix  pyproject.toml
.github/workflows/: ci.yaml
src/brrr/: __init__.py  asyncrrr.py  brrr.py  codec.py  compat.py  queue.py  store.py
src/brrr/backends/: dynamo.py  in_memory.py  redis.py  sqs.py
src/contrib/: srrrver.py
src/tests/: test_queue.py  test_store.py
tests/: closable_test_queue.py  contract_queue.py  contract_store.py  test_brrr.py  test_codec.py  test_dynamo.py  test_dynamo_store.py  test_in_memory.py  test_in_memory_queue.py  test_in_memory_store.py  test_queue.py  test_redis_queue.py  test_spawn_limit.py  test_store.py
