[project]
name = "brrr"
version = "0.0.4"
description = "Horizontally scalable workflow scheduling with pluggable backends"
authors = [
    {name = "Hraban Luyat", email = "hraban@0brg.net"},
    {name = "Jesse Zwaan", email = "j.k.zwaan@gmail.com"},
]
readme = "README.md"
requires-python = "<4,>=3.12"
dependencies = []

[dependency-groups]
dev = [
    "boto3>=1.35.71",
    "boto3-stubs[essential]>=1.35.71",
    "pyright>=1.1.389",
    "redis>=5.2.0",
    "ruff>=0.8.1",
    "pytest>=8.3.4",
    "bottle>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
