[project]
name = "brrr"
version = "0.0.5"
description = "Horizontally scalable workflow scheduling with pluggable backends"
authors = [
    {name = "Hraban Luyat", email = "hraban@0brg.net"},
    {name = "Jesse Zwaan", email = "j.k.zwaan@gmail.com"},
]
readme = "README.md"
requires-python = "<4,>=3.12"
dependencies = []

[project.urls]
homepage = "https://github.com/nobssoftware/brrr"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "redis>=5.2.0",
    "ruff>=0.8.1",
    "pytest>=8.3.4",
    "aioboto3>=13.3.0",
    "types-aioboto3[essential]>=13.3.0.post1",
    "pytest-asyncio>=0.25.0",
    "aiohttp>=3.11.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
